Fixed all queries, added comments, changed DML and DMQ SQL files

--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -8,7 +8,5 @@
   </br>
   <h3>Stations: Lists all of the trains. User can add a station. They can also filter the station by their states.</h3>
   </br>
-  <h3>Routes: Lists the routesthrustatiosn intersection table. Shows each Routes and its corresponding Stations below in order.</h3>
+  <h3>Routes: Lists all of the Routes with the RoutesThruStations intersection table connected to each Routes. Shows each Routes and its corresponding Stations below in order.</h3>
 </div>
-
-    
