--- a/views/stations.handlebars
+++ b/views/stations.handlebars
@@ -22,7 +22,7 @@
 <main id="card-container">
   <div id="row">
 
-    {{#each data}}
+    {{#each stations}}
     <div class="col">
       <section class="card">
         <button value={{this.stationID}} class="close_card" onclick="deletestations(this)">x</button>
