--- a/views/trains.handlebars
+++ b/views/trains.handlebars
@@ -53,7 +53,6 @@
   <div class="input-box">
     <label>Main Station</label>
     <select id="main-station">
-      <option value="">None</option>
       {{#each stations}}
       <option value={{this.stationID}}>{{this.stationname}}</option>
       {{/each}}
@@ -91,7 +90,6 @@
   <div class="update-box">
     <label>Train #</label>
     <select name="train" id="update-train-id">
-      <option value="">None</option>
       {{#each trains}}
         <option value={{this.trainID}}>Train #{{this.trainID}}</option>
       {{/each}}
@@ -100,7 +98,6 @@
   <div class="update-box">
     <Label>Main Station</label>
     <select id="main-station-update">
-      <option value="">None</option>
       {{#each stations}}
       <option value={{this.stationID}}>{{this.stationname}}</option>
       {{/each}}
@@ -112,11 +109,11 @@
   </div>
   <div class="update-box">
     <label>Cost</label>
-    <input type="text" id="train-cost-update">
+    <input type="number" min="0" step="1" id="train-cost-update">
   </div>
   <div class="update-box">
     <label>Capacity</label>
-    <input type="text" id="train-capacity-update">
+    <input type="number" min="0" step"1" id="train-capacity-update">
   </div>
   <div class="update-box">
     <label>Conductor's First Name</label>
